@@ -117,6 +117,13 @@ struct Invite {
 class SessionHistory : public QObject {
 	Q_OBJECT
 public:
+	enum class ArchiveMode {
+		Unsupported,
+		Default,
+		Disabled,
+		Enabled,
+	};
+
 	enum Flag {
 		Persistent = 0x01,
 		PreserveChat = 0x02,
@@ -192,6 +199,9 @@ public:
 
 	//! Set the title of the session, returns whether it changed
 	virtual bool setTitle(const QString &title) = 0;
+
+	virtual ArchiveMode archiveMode() const = 0;
+	virtual void setArchiveMode(ArchiveMode archiveMode) = 0;
 
 	//! Get the persistent session flags
 	virtual Flags flags() const = 0;
